# wind-simulator

./: .gitignore  CMakeLists.txt  index.html  main.js  package-lock.json  package.json
css/: style.css
js/: app.js  drawing.js  objects.js  physics.js  vector.js  wind.js
src/: main.cpp
